@@ -2,7 +2,7 @@ Packages known to be needed to build in debian jessie and later.
 Some of these will pull in other ones.
 
     automake
-    build-essential * we now require C++11
+    build-essential  * we now require C++11
     cmake-curses-gui * 3.0 or later
     dssi-dev
     fluid
@@ -11,12 +11,12 @@ Some of these will pull in other ones.
     libfltk1.3-dev
     libglu1-mesa-dev
     libjack-jackd2-dev
-    libjpeg-dev
+    libjpeg-dev         ? may no longer be needed
     libmxml-dev
     libncurses5-dev
     libreadline-dev
     libxft-dev
-    libxinerama-dev
+    libxinerama-dev     ? may no longer be needed
     libxml2-dev
     pkg-config
     xutils-dev
