@@ -118,6 +118,7 @@ class Bank : private MiscFuncs
         bool emptyslot(unsigned int ninstrument) { return emptyslotWithID(currentRootID, currentBankID, ninstrument); }
         bool clearslot(unsigned int ninstrument);
         bool savetoslot(unsigned int ninstrument, Part *part);
+        bool saveWithFullID(size_t rootID, size_t bankID, int ninstrument, int npart);
         bool swapslot(unsigned int n1, unsigned int n2);
         void swapbanks(unsigned int firstID, unsigned int secondID);
         string getBankName(int bankID);
